--- a/config/locales/pages.ru.yml
+++ b/config/locales/pages.ru.yml
@@ -1,17 +1,17 @@
 ru:
   pages:
     show:
-      meta_title: "%{title} ~ RubyJobs.ru"
+      meta_title: "%{title} ~ MobileJobs.ru"
       about:
         title: "О проекте"
         body: |
-          RubyJobs.ru создан в 2008 году. Проект является абсолютно некоммерческим. Его основная цель - поддержка сообщества разработчиков.
+          MobileJobs.ru создан в 2008 году. Проект является абсолютно некоммерческим. Его основная цель - поддержка сообщества разработчиков.
 
           Вакансии публикуются бесплатно. Размещаемая информация передается без изменений и принадлежит ее авторам.
 
           Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с языком Ruby.
 
-          Начиная с 2011 года, RubyJobs.ru выступал информационным партнером как локальных, так и международных конференций разработчиков. Среди них:
+          Начиная с 2011 года, MobileJobs.ru выступал информационным партнером как локальных, так и международных конференций разработчиков. Среди них:
 
             * [RubyC](http://rubyc.eu/)
             * [DevConf 2011](http://devconf.ru/)
@@ -22,7 +22,7 @@ ru:
 
           Исходный код этого сайта всегда можно найти на GitHub - [github.com/soulim/rbjobs](https://github.com/soulim/rbjobs)
 
-          [Свяжитесь со мной](http://rubyjobs.ru/pages/contacts), если у вас есть идеи, предложения и вопросы.
+          [Свяжитесь со мной](http://MobileJobs.ru/pages/contacts), если у вас есть идеи, предложения и вопросы.
       terms:
         title: "Условия сервиса"
         body: |
@@ -42,4 +42,4 @@ ru:
           Твиттер: [@rubyjobsru](http://twitter.com/rubyjobsru)
 
           Александр Сулим,
-          автор и куратор [RubyJobs.ru](http://rubyjobs.ru) и [RubyFlow.ru](http://rubyflow.ru)
+          автор и куратор [MobileJobs.ru](http://MobileJobs.ru) и [RubyFlow.ru](http://rubyflow.ru)
