--- a/config/locales/layouts.ru.yml
+++ b/config/locales/layouts.ru.yml
@@ -1,10 +1,9 @@
 ru:
   layouts:
     application:
-      meta_title: "Вакансии для разработчиков, использующих язык Ruby"
-      meta_description: "Размещение вакансий абсолютно бесплатное. RubyJobs.ru создан с целью поддержки сообщества разработчиков."
-      meta_keywords: "Ruby, Rails, вакансии, размещение вакансий, работа"
-      hosting: "При поддержке хостинг-провайдера %{link}"
+      meta_title: "Вакансии для разработчиков iOs, Android, Windows Phone"
+      meta_description: "Размещение вакансий абсолютно бесплатное. MobileJobs.ru создан с целью поддержки сообщества разработчиков."
+      meta_keywords: "iOs, Android, Windows Phone, вакансии, размещение вакансий, работа"
       subscriptions: "Подпишитесь на доставку вакансий"
       pages:
         about: "О проекте"
