--- a/config/locales/pages.ru.yml
+++ b/config/locales/pages.ru.yml
@@ -5,22 +5,18 @@ ru:
       about:
         title: "О проекте"
         body: |
-          MobileJobs.ru создан в 2008 году. Проект является абсолютно некоммерческим. Его основная цель - поддержка сообщества разработчиков.
+          MobileJobs.ru создан в 2014 году. Проект является абсолютно некоммерческим. Его основная цель - поддержка сообщества разработчиков.
 
           Вакансии публикуются бесплатно. Размещаемая информация передается без изменений и принадлежит ее авторам.
 
           Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с языком Ruby.
 
-          Начиная с 2011 года, MobileJobs.ru выступал информационным партнером как локальных, так и международных конференций разработчиков. Среди них:
+          Проект открыт к предложениям по оказанию информационной поддержке любым мероприятиям по мобильной тематике
 
-            * [RubyC](http://rubyc.eu/)
-            * [DevConf 2011](http://devconf.ru/)
-            * [RuPy 2011](http://rupy.eu/)
-            * [RailsClub'Moscow](http://railsclub.ru)
-            * [HighLoad ++](http://www.highload.ru/)
-            * [Whale Rider 2011](http://whalerider.ru/)
+          При разработке за онову был взят проект RubyJobs.ru Александра Сулима
+          Исходный код на GitHub - [github.com/soulim/rbjobs](https://github.com/soulim/rbjobs)
 
-          Исходный код этого сайта всегда можно найти на GitHub - [github.com/soulim/rbjobs](https://github.com/soulim/rbjobs)
+          Исходный код этого сайта - [github.com/fzn7/mobilejobs.ru](https://github.com/fzn7/mobilejobs.ru)
 
           [Свяжитесь со мной](http://MobileJobs.ru/pages/contacts), если у вас есть идеи, предложения и вопросы.
       terms:
@@ -32,14 +28,14 @@ ru:
 
           Автор этого сайта не несет никакой ответственности в отношении предоставляемой посетителями информации.
 
-          Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с языком Ruby.
+          Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с мобильной разработкой.
       contacts:
         title: "Контактная информация"
         body: |
           Если у вас возникли вопросы, появились идеи или есть интересные предложения, то смело пишите. Постараюсь ответить в тот же день.
 
-          Электронная почта: <hello@sul.im>
-          Твиттер: [@rubyjobsru](http://twitter.com/rubyjobsru)
+          Электронная почта: <ilyaplotnikoff@gmail.com>
+          Твиттер: [@ru_mobilejobs](https://twitter.com/ru_mobilejobs)
 
-          Александр Сулим,
-          автор и куратор [MobileJobs.ru](http://MobileJobs.ru) и [RubyFlow.ru](http://rubyflow.ru)
+          Илья Плотников,
+          автор и куратор [MobileJobs.ru](http://MobileJobs.ru)
