Fix vacancy add

--- a/config/locales/layouts.ru.yml
+++ b/config/locales/layouts.ru.yml
@@ -11,5 +11,4 @@ ru:
         contacts: "Контакты"
     vacancy_mailer:
       signature: |
-        Александр Сулим
-        http://sul.im
+        Илья Плотников
