--- a/config/locales/pages.ru.yml
+++ b/config/locales/pages.ru.yml
@@ -9,14 +9,13 @@ ru:
 
           Вакансии публикуются бесплатно. Размещаемая информация передается без изменений и принадлежит ее авторам.
 
-          Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с языком Ruby.
+          Для поддержания качества контента, публикуемые вакансии проходят предварительную проверку на соответствие тематике проекта. Таким образом отсеивается откровенный спам и вакансии, никак не связанные с мобильной разработкой.
 
           Проект открыт к предложениям по оказанию информационной поддержке любым мероприятиям по мобильной тематике
 
-          При разработке за онову был взят проект RubyJobs.ru Александра Сулима
-          Исходный код на GitHub - [github.com/soulim/rbjobs](https://github.com/soulim/rbjobs)
+          При разработке за основу был взят проект [github.com/soulim/rbjobs]RubyJobs.ru Александра Сулима
 
-          Исходный код этого сайта - [github.com/fzn7/mobilejobs.ru](https://github.com/fzn7/mobilejobs.ru)
+          Исходный код MobileJobs.ru вы можете найти по адресу: [github.com/fzn7/mobilejobs.ru](https://github.com/fzn7/mobilejobs.ru)
 
           [Свяжитесь со мной](http://MobileJobs.ru/pages/contacts), если у вас есть идеи, предложения и вопросы.
       terms:
