--- a/config/locales/pages.ru.yml
+++ b/config/locales/pages.ru.yml
@@ -13,7 +13,7 @@ ru:
 
           Проект открыт к предложениям по оказанию информационной поддержке любым мероприятиям по мобильной тематике
 
-          При разработке за основу был взят проект [github.com/soulim/rbjobs]RubyJobs.ru Александра Сулима
+          При разработке за основу был взят проект [github.com/soulim/rbjobs](RubyJobs.ru) Александра Сулима
 
           Исходный код MobileJobs.ru вы можете найти по адресу: [github.com/fzn7/mobilejobs.ru](https://github.com/fzn7/mobilejobs.ru)
 
